[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "python-dotenv>=1.1.0",
]


[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.0"  # or latest version
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"
flask_sqlalchemy = "^3.1.1"
flask-testing = "^0.8.1"





[tool.poetry.dev-dependencies]
# Add dev dependencies here
# e.g., pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
